// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skills island > keeps its rendered shape, hub search 1`] = `
"div.pmchips
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
  button.pill
div.hubgrid
  div.hubcard.pmcard
    div.top
      div.pmhead
        span.pmtile.th1
        div.pmid
          div.pmnm
            span
          div.pmpub
    p.one
    div.foot
      div.stars
        span.st
        span.st
        span.st
        span.st
        span.st
        span.sv
      div.act
        button.mini.gold
  div.hubcard.pmcard
    div.top
      div.pmhead
        span.pmtile.th2
        div.pmid
          div.pmnm
            span
          div.pmpub
    p.one
    div.foot
      div.stars
        span.st
        span.st
        span.st
        span.st
        span.st
        span.sv
      div.act
        button.mini.gold"
`;

exports[`skills island > keeps its rendered shape, installed list 1`] = `
"div.pmback
  button.mini.ghost
  b
div.hubgrid
  div.hubcard.pmcard
    div.top
      div.pmhead
        span.pmtile.th4
        div.pmid
          div.pmnm
            span
          div.pmpub
    p.one
    div.foot
      span
      div.act
        button.mini.ghost
        button.mini.gold"
`;
